src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:/PPL/233_Assignment_1/assignment1-initial/src/main/mt22/parser/MT22.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'//'", "'/*'", "'*/'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'integer'", 
                     "'void'", "'array'", "'break'", "'float'", "'return'", 
                     "'out'", "'boolean'", "'for'", "'string'", "'continue'", 
                     "'do'", "'function'", "'of'", "'else'", "'if'", "'while'", 
                     "'inherit'", "'true'", "'false'", "'+'", "'!'", "'!='", 
                     "'-'", "'*'", "'&&'", "'<'", "'||'", "'<='", "'/'", 
                     "'=='", "'>'", "'%'", "'>='", "'::'", "'.'", "':'", 
                     "','", "';'", "'('", "')'", "'{'", "'}'", "'='", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT", "LCOMMENT", "RCOMMENT", 
                      "COMMENTLINE", "COMMENTGRAPH", "COMMENTC", "COMMENTCPP", 
                      "AUTO", "INTEGER", "VOID", "ARRAY", "BREAK", "FLOAT", 
                      "RETURN", "OUT", "BOOLEAN", "FOR", "STRING", "CONTINUE", 
                      "DO", "FUNCTION", "OF", "ELSE", "IF", "WHILE", "INHERIT", 
                      "TRUE", "FALSE", "PLUS", "NOT", "NOTEQ", "MINUS", 
                      "MUL", "AND", "LESS", "OR", "LESSEQ", "DIVIDE", "EQ", 
                      "GREATER", "MODULO", "GREATEREQ", "STRCONCAT", "DOT", 
                      "CL", "CM", "SM", "LP", "RP", "LC", "RC", "ASSIGN", 
                      "LSQ", "RSQ", "ID", "INTLIT", "FLOATLIT", "STRLIT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_declarationlist = 2
    RULE_declarationlisttail = 3
    RULE_atomicType = 4
    RULE_dimension = 5
    RULE_dimensiontail = 6
    RULE_arrayType = 7
    RULE_voidType = 8
    RULE_autoType = 9
    RULE_idlist = 10
    RULE_idtail = 11
    RULE_vardecl = 12
    RULE_vardeclnosemi = 13
    RULE_vardecllist = 14
    RULE_vardecllisttail = 15
    RULE_para = 16
    RULE_paralist = 17
    RULE_paratail = 18
    RULE_funcdecl = 19
    RULE_funcpropo = 20
    RULE_funcbody = 21
    RULE_callexpr = 22
    RULE_idxOp = 23
    RULE_expr = 24
    RULE_expr1 = 25
    RULE_expr2 = 26
    RULE_expr3 = 27
    RULE_expr4 = 28
    RULE_expr5 = 29
    RULE_expr6 = 30
    RULE_expr7 = 31
    RULE_expr8 = 32
    RULE_exprlist = 33
    RULE_exprlisttail = 34
    RULE_subexpr = 35
    RULE_numOperand = 36
    RULE_booleanOperand = 37
    RULE_stringOperand = 38
    RULE_relationalOperand = 39
    RULE_stmt = 40
    RULE_stmtlist = 41
    RULE_stmtlisttail = 42
    RULE_lhs = 43
    RULE_assignstmt = 44
    RULE_ifstmt = 45
    RULE_forstmt = 46
    RULE_whilestmt = 47
    RULE_do_whilestmt = 48
    RULE_breakstmt = 49
    RULE_continuestmt = 50
    RULE_returnstmt = 51
    RULE_callstmt = 52
    RULE_blockstmt = 53
    RULE_blockcontent = 54
    RULE_blockcontentlist = 55
    RULE_blockcontentlisttail = 56
    RULE_boolean = 57
    RULE_arraylit = 58
    RULE_comment = 59

    ruleNames =  [ "program", "declaration", "declarationlist", "declarationlisttail", 
                   "atomicType", "dimension", "dimensiontail", "arrayType", 
                   "voidType", "autoType", "idlist", "idtail", "vardecl", 
                   "vardeclnosemi", "vardecllist", "vardecllisttail", "para", 
                   "paralist", "paratail", "funcdecl", "funcpropo", "funcbody", 
                   "callexpr", "idxOp", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "expr8", "exprlist", 
                   "exprlisttail", "subexpr", "numOperand", "booleanOperand", 
                   "stringOperand", "relationalOperand", "stmt", "stmtlist", 
                   "stmtlisttail", "lhs", "assignstmt", "ifstmt", "forstmt", 
                   "whilestmt", "do_whilestmt", "breakstmt", "continuestmt", 
                   "returnstmt", "callstmt", "blockstmt", "blockcontent", 
                   "blockcontentlist", "blockcontentlisttail", "boolean", 
                   "arraylit", "comment" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    LCOMMENT=3
    RCOMMENT=4
    COMMENTLINE=5
    COMMENTGRAPH=6
    COMMENTC=7
    COMMENTCPP=8
    AUTO=9
    INTEGER=10
    VOID=11
    ARRAY=12
    BREAK=13
    FLOAT=14
    RETURN=15
    OUT=16
    BOOLEAN=17
    FOR=18
    STRING=19
    CONTINUE=20
    DO=21
    FUNCTION=22
    OF=23
    ELSE=24
    IF=25
    WHILE=26
    INHERIT=27
    TRUE=28
    FALSE=29
    PLUS=30
    NOT=31
    NOTEQ=32
    MINUS=33
    MUL=34
    AND=35
    LESS=36
    OR=37
    LESSEQ=38
    DIVIDE=39
    EQ=40
    GREATER=41
    MODULO=42
    GREATEREQ=43
    STRCONCAT=44
    DOT=45
    CL=46
    CM=47
    SM=48
    LP=49
    RP=50
    LC=51
    RC=52
    ASSIGN=53
    LSQ=54
    RSQ=55
    ID=56
    INTLIT=57
    FLOATLIT=58
    STRLIT=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationlist(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationlistContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.declarationlist()
            self.state = 121
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 123
                self.vardecl()
                pass

            elif la_ == 2:
                self.state = 124
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def declarationlisttail(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationlisttailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declarationlist




    def declarationlist(self):

        localctx = MT22Parser.DeclarationlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarationlist)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.declaration()
                self.state = 128
                self.declarationlisttail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationlisttailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def declarationlisttail(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationlisttailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declarationlisttail




    def declarationlisttail(self):

        localctx = MT22Parser.DeclarationlisttailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarationlisttail)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [56]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.declaration()
                self.state = 134
                self.declarationlisttail()
                pass
            elif token in [-1]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomicType




    def atomicType(self):

        localctx = MT22Parser.AtomicTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atomicType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 672768) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def dimensiontail(self):
            return self.getTypedRuleContext(MT22Parser.DimensiontailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimension




    def dimension(self):

        localctx = MT22Parser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimension)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(MT22Parser.INTLIT)
                self.state = 142
                self.dimensiontail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensiontailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def dimensiontail(self):
            return self.getTypedRuleContext(MT22Parser.DimensiontailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensiontail




    def dimensiontail(self):

        localctx = MT22Parser.DimensiontailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dimensiontail)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(MT22Parser.CM)
                self.state = 147
                self.match(MT22Parser.INTLIT)
                self.state = 148
                self.dimensiontail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSQ(self):
            return self.getToken(MT22Parser.LSQ, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def RSQ(self):
            return self.getToken(MT22Parser.RSQ, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayType




    def arrayType(self):

        localctx = MT22Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(MT22Parser.ARRAY)
            self.state = 153
            self.match(MT22Parser.LSQ)
            self.state = 154
            self.dimension()
            self.state = 155
            self.match(MT22Parser.RSQ)
            self.state = 156
            self.match(MT22Parser.OF)
            self.state = 157
            self.atomicType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VoidTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_voidType




    def voidType(self):

        localctx = MT22Parser.VoidTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_voidType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(MT22Parser.VOID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutoTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_autoType




    def autoType(self):

        localctx = MT22Parser.AutoTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_autoType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(MT22Parser.AUTO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def idtail(self):
            return self.getTypedRuleContext(MT22Parser.IdtailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_idlist)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(MT22Parser.ID)
                self.state = 164
                self.idtail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdtailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def idtail(self):
            return self.getTypedRuleContext(MT22Parser.IdtailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idtail




    def idtail(self):

        localctx = MT22Parser.IdtailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_idtail)
        try:
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [47]:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.match(MT22Parser.CM)
                self.state = 169
                self.match(MT22Parser.ID)
                self.state = 170
                self.idtail()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def autoType(self):
            return self.getTypedRuleContext(MT22Parser.AutoTypeContext,0)


        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def vardeclnosemi(self):
            return self.getTypedRuleContext(MT22Parser.VardeclnosemiContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_vardecl)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.idlist()
                self.state = 175
                self.match(MT22Parser.CL)
                self.state = 180
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10, 14, 17, 19]:
                    self.state = 176
                    self.atomicType()
                    pass
                elif token in [9]:
                    self.state = 177
                    self.autoType()
                    pass
                elif token in [57]:
                    self.state = 178
                    self.dimension()
                    pass
                elif token in [12]:
                    self.state = 179
                    self.arrayType()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 182
                self.match(MT22Parser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                self.vardeclnosemi()
                self.state = 185
                self.match(MT22Parser.SM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclnosemiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def autoType(self):
            return self.getTypedRuleContext(MT22Parser.AutoTypeContext,0)


        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def vardeclnosemi(self):
            return self.getTypedRuleContext(MT22Parser.VardeclnosemiContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclnosemi




    def vardeclnosemi(self):

        localctx = MT22Parser.VardeclnosemiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_vardeclnosemi)
        try:
            self.state = 206
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.match(MT22Parser.ID)
                self.state = 190
                self.match(MT22Parser.CL)
                self.state = 195
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10, 14, 17, 19]:
                    self.state = 191
                    self.atomicType()
                    pass
                elif token in [9]:
                    self.state = 192
                    self.autoType()
                    pass
                elif token in [57]:
                    self.state = 193
                    self.dimension()
                    pass
                elif token in [12]:
                    self.state = 194
                    self.arrayType()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 197
                self.match(MT22Parser.ASSIGN)
                self.state = 198
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 200
                self.match(MT22Parser.ID)
                self.state = 201
                self.match(MT22Parser.CM)
                self.state = 202
                self.vardeclnosemi()
                self.state = 203
                self.match(MT22Parser.CM)
                self.state = 204
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def vardecllisttail(self):
            return self.getTypedRuleContext(MT22Parser.VardecllisttailContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecllist




    def vardecllist(self):

        localctx = MT22Parser.VardecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_vardecllist)
        try:
            self.state = 212
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 208
                self.vardecl()
                self.state = 209
                self.vardecllisttail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 211
                self.vardecl()
                pass

